# pymihome

./: .gitignore  MANIFEST.in  README.md  pymihome.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile
docs/source/: conf.py  index.rst
pymihome/: __init__.py  pymihome.py
src/pymihome/: pymihome.py
tests/: test_main.py
